# formflex-api

./: Formflex API - Uma api.postman_collection.json  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
api/: urls.py
api/migrations/: 0001_initial.py  0002_rename_text_question_title.py  0003_remove_response_user_id_form_created_by_and_more.py  0004_alter_response_answer_choice.py
api/models/: model.py
api/serializers/: serializers.py
api/views/: choice_viewset.py  form_viewset.py  question_viewset.py  response_viewset.py
formflex_api/: asgi.py  settings.py  urls.py  wsgi.py
