[tool.poetry]
name = "formflex_api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.6"
flake8 = "^7.1.0"
black = "^24.4.2"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"
install = "^1.3.5"
django-stubs = "^5.0.2"
djoser = "^2.2.3"
djangorestframework-simplejwt = "^5.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
